# my_zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yml
.cargo/: config.toml
configuration/: base.yaml  local.yaml
doc/: git.md  rust.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250921_232007_add_status_to_subscriptions.rs  m20250921_232411_make_status_not_null_in_subscriptions.rs  m20250921_232715_create_subscription_tokens_table.rs
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/entities/: mod.rs  subscription_tokens.rs  subscriptions.rs
src/routes/: health_check.rs  mod.rs  subscription_confirm.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscription_confirm.rs  subscriptions.rs
