[package]
name = "my-zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8.4"
reqwest = "0.12.23"
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"]}
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
