[package]
name = "my-zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
config = "0.15.15"
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"]}
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
# env_logger = "0.11.8"
log = "0.4.28"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
once_cell = "1.21.3"
secrecy = { version = "0.10.3", features = ["serde"] }
dotenv = "0.15.0"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
validator = "0.20.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"]}
lettre = { version = "0.11.18", features = ["pool"]}
rand = { version = "0.9.2", features = ["std_rng"] }

[dev-dependencies]
migration = { path = "migration" }
fake = "4"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
